@@ -10,9 +10,7 @@ import org.jmouse.dom.TagName;
 import org.jmouse.dom.node.ElementNode;
 import org.jmouse.dom.node.TextNode;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 
 /**
  * Materializes a {@link Blueprint} into a {@link Node} tree.
@@ -29,12 +27,12 @@ public interface BlueprintMaterializer {
     Node materialize(Blueprint blueprint, RenderingExecution execution);
 
     /**
-     * Standard implementation based on {@link org.jmouse.core.access.ValueNavigator} and {@link PropertyPath}.
+     * Standard implementation based on {@link ValueNavigator} and {@link PropertyPath}.
      */
     final class Implementation implements BlueprintMaterializer {
 
         private final PathValueResolver  valueResolver      = new PathValueResolver();
-        private final PredicateEvaluator predicateEvaluator = new PredicateEvaluator(valueResolver);
+        private final PredicateEvaluator predicateEvaluator = new PredicateEvaluator(this::resolveValue);
         private final BlueprintCatalog   catalog;
 
         public Implementation(BlueprintCatalog catalog) {
@@ -55,7 +53,7 @@ public interface BlueprintMaterializer {
                 case Blueprint.ConditionalBlueprint conditional -> materializeConditional(conditional, execution);
                 case Blueprint.RepeatBlueprint repeat -> materializeRepeat(repeat, execution);
                 case Blueprint.IncludeBlueprint include -> materializeInclude(include, execution);
-                case null -> throw new IllegalStateException("Unsupported blueprint type.");
+                case null -> null;
             };
         }
 
@@ -64,11 +62,22 @@ public interface BlueprintMaterializer {
 
             applyAttributes(node, element.attributes(), execution);
 
-            for (Blueprint child : element.children()) {
-                node.append(materializeInternal(child, execution));
+            DirectiveOutcome outcome = applyDirectives(node, element.directives(), execution);
+
+            if (outcome.isOmitted()) {
+                return null;
             }
 
-            return node;
+            ElementNode effective = outcome.node();
+
+            for (Blueprint child : element.children()) {
+                Node childNode = materializeInternal(child, execution);
+                if (childNode != null) {
+                    effective.append(childNode);
+                }
+            }
+
+            return outcome.root();
         }
 
         private Node materializeText(Blueprint.TextBlueprint text, RenderingExecution execution) {
@@ -86,20 +95,21 @@ public interface BlueprintMaterializer {
             }
 
             if (branch.size() == 1) {
-                return materializeInternal(branch.get(0), execution);
+                return materializeInternal(branch.getFirst(), execution);
             }
 
-            // Container is a minimal structural fallback.
             ElementNode container = new ElementNode(TagName.DIV);
+
             for (Blueprint child : branch) {
                 container.append(materializeInternal(child, execution));
             }
+
             return container;
         }
 
         private Node materializeRepeat(Blueprint.RepeatBlueprint repeat, RenderingExecution execution) {
             Object         collectionValue    = resolveValue(repeat.collection(), execution);
-            ObjectAccessor collectionAccessor = execution.accessorWrapper().wrap(collectionValue);
+            ObjectAccessor collectionAccessor = execution.accessorWrapper().wrapIfNecessary(collectionValue);
 
             if (!(collectionAccessor.isCollection() || collectionAccessor.isList() || collectionAccessor.isMap())) {
                 return new TextNode("");
@@ -150,6 +160,60 @@ public interface BlueprintMaterializer {
             return materializeInternal(blueprint, nested);
         }
 
+        private DirectiveOutcome applyDirectives(
+                ElementNode node,
+                List<BlueprintDirective> directives,
+                RenderingExecution execution
+        ) {
+            if (directives == null || directives.isEmpty()) {
+                return DirectiveOutcome.keep(node);
+            }
+
+            Node root = node;
+
+            for (BlueprintDirective directive : directives) {
+                switch (directive) {
+                    case BlueprintDirective.OmitIf omitIf -> {
+                        if (predicateEvaluator.evaluate(omitIf.predicate(), execution)) {
+                            return DirectiveOutcome.omit();
+                        }
+                    }
+                    case BlueprintDirective.SetAttributeIf attributeIf -> {
+                        if (predicateEvaluator.evaluate(attributeIf.predicate(), execution)) {
+                            Object value = resolveValue(attributeIf.value(), execution);
+                            if (value != null) {
+                                node.addAttribute(attributeIf.name(), String.valueOf(value));
+                            }
+                        }
+                    }
+                    case BlueprintDirective.RemoveAttributeIf removeIf -> {
+                        if (predicateEvaluator.evaluate(removeIf.predicate(), execution)) {
+                            node.getAttributes().remove(removeIf.attributeName());
+                        }
+                    }
+                    case BlueprintDirective.AddClassIf classIf -> {
+                        if (predicateEvaluator.evaluate(classIf.predicate(), execution)) {
+                            Object value = resolveValue(classIf.classValue(), execution);
+                            if (value != null) {
+                                String additional = String.valueOf(value).trim();
+                                Node.addClass(node, additional);
+                            }
+                        }
+                    }
+                    case BlueprintDirective.WrapIf wrapIf -> {
+                        if (predicateEvaluator.evaluate(wrapIf.predicate(), execution)) {
+                            ElementNode wrapper = new ElementNode(toTagName(wrapIf.wrapperTagName()));
+                            applyAttributes(wrapper, wrapIf.wrapperAttributes(), execution);
+                            node.wrap(wrapper);
+                            root = wrapper;
+                        }
+                    }
+                }
+            }
+
+            return DirectiveOutcome.wrapped(node, root);
+        }
+
         private void applyAttributes(
                 ElementNode node,
                 Map<String, BlueprintValue> attributes,
@@ -192,7 +256,7 @@ public interface BlueprintMaterializer {
      * <ul>
      *   <li>If the first path segment matches a scoped variable name, resolve against that variable accessor.</li>
      *   <li>Otherwise resolve against the root accessor.</li>
-     *   <li>Resolution is delegated to {@link org.jmouse.core.access.ValueNavigator}.</li>
+     *   <li>Resolution is delegated to {@link ValueNavigator}.</li>
      * </ul>
      */
     final class PathValueResolver {
@@ -228,11 +292,41 @@ public interface BlueprintMaterializer {
                 return scalar.unwrap();
             }
             if (value instanceof ObjectAccessor accessor) {
-                // For non-scalar results, return accessor itself.
-                // Attributes and text will call String.valueOf(...) which becomes stable.
                 return accessor;
             }
             return value;
+        }
+    }
+
+    /**
+     * The result of directive application.
+     *
+     * <p>Directives may:</p>
+     * <ul>
+     *   <li>omit the node entirely</li>
+     *   <li>wrap the node (root changes, but content node stays the same)</li>
+     *   <li>mutate attributes/classes</li>
+     * </ul>
+     */
+    record DirectiveOutcome(
+            boolean omitted,
+            ElementNode node,
+            Node root
+    ) {
+        static DirectiveOutcome keep(ElementNode node) {
+            return new DirectiveOutcome(false, node, node);
+        }
+
+        static DirectiveOutcome omit() {
+            return new DirectiveOutcome(true, null, null);
+        }
+
+        static DirectiveOutcome wrapped(ElementNode node, Node root) {
+            return new DirectiveOutcome(false, node, root);
+        }
+
+        boolean isOmitted() {
+            return omitted;
         }
     }
 
@@ -241,18 +335,49 @@ public interface BlueprintMaterializer {
      */
     final class PredicateEvaluator {
 
-        private final PathValueResolver resolver;
+        private final ValueResolver resolver;
 
-        public PredicateEvaluator(PathValueResolver resolver) {
+        public PredicateEvaluator(ValueResolver resolver) {
             this.resolver = Verify.nonNull(resolver, "resolver");
         }
 
         public boolean evaluate(BlueprintPredicate predicate, RenderingExecution execution) {
-            if (predicate instanceof BlueprintPredicate.PathBooleanPredicate(String path)) {
-                Object value = resolver.resolve(path, execution);
-                return asBoolean(value);
-            }
-            throw new IllegalStateException("Unsupported predicate type: " + predicate.getClass().getName());
+            return switch (predicate) {
+                case BlueprintPredicate.BooleanValuePredicate booleanValuePredicate ->
+                        asBoolean(resolver.resolve(booleanValuePredicate.value(), execution));
+                case BlueprintPredicate.PresentPredicate presentPredicate ->
+                        isPresent(resolver.resolve(presentPredicate.value(), execution));
+                case BlueprintPredicate.EqualityPredicate equalityPredicate ->
+                        Objects.equals(
+                                resolver.resolve(equalityPredicate.left(), execution),
+                                resolver.resolve(equalityPredicate.right(), execution)
+                        );
+                case BlueprintPredicate.NotPredicate notPredicate ->
+                        !evaluate(notPredicate.inner(), execution);
+                case BlueprintPredicate.AllPredicate allPredicate -> {
+                    for (BlueprintPredicate inner : allPredicate.predicates()) {
+                        if (!evaluate(inner, execution)) {
+                            yield false;
+                        }
+                    }
+                    yield true;
+                }
+                case BlueprintPredicate.ContainsPredicate containsPredicate -> contains(
+                        resolver.resolve(containsPredicate.collection(), execution),
+                        resolver.resolve(containsPredicate.value(), execution)
+                );
+                default -> throw new IllegalStateException("Unexpected predicate: " + predicate);
+            };
+        }
+
+        private boolean isPresent(Object value) {
+            return switch (value) {
+                case null -> false;
+                case String string -> !string.trim().isEmpty();
+                case Collection<?> collection -> !collection.isEmpty();
+                case Map<?, ?> map -> !map.isEmpty();
+                default -> true;
+            };
         }
 
         private boolean asBoolean(Object value) {
@@ -262,6 +387,24 @@ public interface BlueprintMaterializer {
                 case Number number -> number.intValue() != 0;
                 default -> Boolean.parseBoolean(String.valueOf(value));
             };
+        }
+
+        private boolean contains(Object collectionValue, Object searchedValue) {
+            if (collectionValue == null || searchedValue == null) {
+                return false;
+            }
+
+            if (collectionValue.getClass().isArray()) {
+                return contains(List.of(((Object[]) collectionValue)), searchedValue);
+            }
+
+            return switch (collectionValue) {
+                case Collection<?> collection -> collection.contains(searchedValue);
+                case Map<?, ?> map -> map.containsKey(searchedValue);
+                case String text -> text.contains(String.valueOf(searchedValue));
+                default -> Objects.equals(collectionValue, searchedValue);
+            };
+
         }
     }
 }
